--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -12,6 +12,9 @@
 <%= f.label :river %>
 <%= f.text_area :river %>
 
+<%= f.label :date %>
+<%= f.date_field :date %>
+
 <%= f.submit "Create User" %>
 
 <% end %>
