--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,5 +2,6 @@
 <%= @user.last_name %>
 <%= @user.email %>
 <%= @user.river %>
+<%= @user.date %>
 
 <%= link_to "Edit User", edit_user_path(@user) %>
