remove date and river columns from user table, added user auth

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,12 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+<% if current_user %>
+<%= link_to "sign me out", sign_out_path %>
+<% else %>
+<%= link_to "sign me in", sign_in_path %>
+<% end %>
+
 
 <%= yield %>
 
